issue450/test_slice_1.mlir.log
within split at ./issue450/test_slice_1.mlir.decomposed.mlir:1 offset :14:11: error: unimplemented: dim is not constant
    %10 = torch.aten.slice.Tensor %arg0, %7, %3, %5, %9 : !torch.vtensor<[20,10,5],f32>, !torch.int, !torch.int, !torch.int, !torch.int -> !torch.vtensor<[?,10,5],f32>
          ^
within split at ./issue450/test_slice_1.mlir.decomposed.mlir:1 offset :14:11: note: see current operation: %53 = "torch.aten.slice.Tensor"(%arg0, %38, %18, %28, %48) : (!torch.vtensor<[20,10,5],f32>, !torch.int, !torch.int, !torch.int, !torch.int) -> !torch.vtensor<[?,10,5],f32>
within split at ./issue450/test_slice_1.mlir.decomposed.mlir:1 offset :14:11: error: failed to legalize operation 'torch.aten.slice.Tensor' that was explicitly marked illegal
    %10 = torch.aten.slice.Tensor %arg0, %7, %3, %5, %9 : !torch.vtensor<[20,10,5],f32>, !torch.int, !torch.int, !torch.int, !torch.int -> !torch.vtensor<[?,10,5],f32>
          ^
within split at ./issue450/test_slice_1.mlir.decomposed.mlir:1 offset :14:11: note: see current operation: %45 = "torch.aten.slice.Tensor"(%arg0, %35, %17, %26, %44) : (!torch.vtensor<[20,10,5],f32>, !torch.int, !torch.int, !torch.int, !torch.int) -> !torch.vtensor<[?,10,5],f32>
